# pluck

./: .gitignore  .prototools  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml  release.yml
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-4-report.md  task-8-report.md
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml
src-tauri/app/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/app/icons/: icon.icns
src-tauri/app/src/: commands.rs  error.rs  lib.rs  main.rs  rebase_editor.rs  state.rs
src-tauri/app/src/git/: cmd.rs  detect.rs  mod.rs  parse.rs  path.rs  snapshot.rs
src-tauri/app/src/git/ops/: branch.rs  checkout.rs  cherry_pick.rs  commit.rs  conflict.rs  diff.rs  fetch.rs  merge.rs  mod.rs  pull.rs  push.rs  rebase.rs  reset.rs  revert.rs  reword.rs  show.rs
src-tauri/app/tests/: bridge_e2e.rs  ops_branch_create.rs  ops_branch_delete.rs  ops_checkout.rs  ops_commit.rs  ops_conflict.rs  ops_merge.rs  ops_pull.rs  ops_push.rs  snapshot.rs
src-tauri/bridge/: Cargo.toml
src/api/: tauri.ts
src/components/: BranchCreateDialog.vue  BranchDeleteDialog.vue  BranchRenameDialog.vue  BranchesPanel.vue  CommitDetailPanel.vue  CommitMessageDialog.vue  CommitPanel.vue  ConfirmDialog.vue  ConflictEditor.vue  ConflictWorkspace.vue  DiffReviewWorkspace.vue  DiffViewer.vue  InProgressBanner.vue  LogPanel.vue  (+10 more)
website/: 404.html  index.html  lighthouserc.desktop.cjs  lighthouserc.mobile.cjs  playwright.config.ts  tsconfig.json  vite.config.ts
(+46 files in other folders)
