[package]
name = "pluck-app"
version = "0.1.14"
description = "Pluck — a native git client"
authors = ["hzp"]
edition = "2021"

[lib]
name = "pluck_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
